Table Game {
    id int [pk]
    title varchar
    description varchar
    year_released int
    player_count int
    est_play_time int
    age_recommendation int
    category int
}

Table Category {
    id int [pk]
    name varchar
}

Table GameCategory {
    id int
    category_id int [ref: > Category.id]
    game_id int [ref: > Game.id]
    user_id int [ref: > User.id]
}

Table User {
    id int [pk]
    username varchar
    password varchar
    email varchar
    first_name varchar
    last_name varchar
}

Table Rating {
    id int [pk]
    user_id int [ref: > User.id]
    game_id int [ref: > Game.id]
    rating int
    review varchar
}

Table GameImg {
    id [pk]
    user_id int [ref: > User.id]
    game_id int [ref: > Game.id]
}